--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+/* shared styles */
+.priTittle{
+font-size: 48px;
+font-weight: 800;
+}
+.priDes{
+font-size: 16px;
+font-weight: 400;
+opacity: 0.7;
+}
+
+body{
+    font-family: "Azeret Mono", serif;
+}
+
+
+/* header section */
+header{
+    max-width: 1420px;
+    height: 730px;
+    background-image: url('/assets/Hero-bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.hero{
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+.heroImage, .heroTittle{
+    margin-top: 25px;
+    margin-bottom: 30px;
+}
+.heroDes{
+    margin: 0 70px;
+}
+.herobtn{
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    border-radius: 8px;
+    background: rgb(13, 19, 33);
+    width: 244px;
+    height: 65px;
+    margin: 30px 370px 45px;
+}
