--- a/styles/style.css
+++ b/styles/style.css
@@ -7,13 +7,18 @@
 }
 
 /* shared styles */
+
 .priTittle{
-font-size: 48px;
+font-size: 32px;
 font-weight: 800;
+line-height: 37px;
+text-align: center;
 }
+
 .priDes{
 font-size: 16px;
 font-weight: 400;
+text-align: center;
 opacity: 0.7;
 }
 
@@ -21,6 +26,12 @@ body{
     font-family: "Azeret Mono", serif;
 }
 
+main{
+    max-width: 1120px;
+    margin:70px 150px 50px      ;
+    border: 2px solid red;
+    height: 3000px;
+}
 
 /* header section */
 header{
@@ -42,6 +53,10 @@ header{
     margin-top: 25px;
     margin-bottom: 30px;
 }
+.heroTittle{
+    font-size: 48px;
+    font-weight: 800;
+}
 .heroDes{
     margin: 0 70px;
 }
@@ -55,4 +70,59 @@ header{
     width: 244px;
     height: 65px;
     margin: 30px 370px 45px;
+    cursor: pointer;
 }
+
+/* main section */
+
+.whyDev{
+    padding: 40px 90px; 
+    height: auto;
+}
+.whyDevDes{
+    padding: 0 45px;
+}
+.whyDevDes h3{
+    margin-bottom: 70px;
+}
+.whyDevDes p{
+    margin-bottom: 50px;
+}
+
+.devcontainer h3{
+    color: rgba(13, 19, 33, 0.7);
+    font-size: 24px;
+    font-weight: 700;
+    text-align: left;
+}
+.devcontainer p{
+    text-align: left;
+}
+
+.devcontainer button{
+    box-sizing: border-box;
+    border: 1px solid rgb(13, 19, 33);
+    opacity: 0.7;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    padding: 12px 20px 12px 20px;
+    cursor: pointer;
+}
+
+.devcontainer1{
+    display: flex;
+    padding: 50px 0;
+}
+.devcontainerDes{
+    flex: 1;
+}
+.devcontainerDes p{
+    margin-top: 16px;
+    margin-bottom: 32px;
+}
+.devcontainerImg{
+    flex: 1;
+}
+
+
