--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,6 @@ body{
 main{
     max-width: 1120px;
     margin:50px 150px 50px;
-    border: 2px solid red;
 }
 
 /* header section */
@@ -124,6 +123,10 @@ header{
     max-width: 850px;
     margin: 50px auto;
 }
+#insP{
+    margin-top: 25px;
+    margin-bottom: 50px;
+}
 .inspireVideo{
     display: flex;
     padding: 30px;
@@ -196,8 +199,6 @@ text-decoration-line: underline;
     align-items: center;
     justify-content: center;
     border-radius: 16px;
-    margin-bottom: 50px;
-    border: 2px solid tomato;
 }
 .support h3{
     color: rgb(255, 255, 255);
@@ -216,7 +217,6 @@ text-decoration-line: underline;
     margin: 15px auto 25px;
 }
 .support #txt{
-    box-sizing: border-box;
     border: 1px solid rgba(13, 19, 33, 0.15);
     border-radius: 8px;
     background: rgb(255, 255, 255);
@@ -235,4 +235,24 @@ text-decoration-line: underline;
     font-weight: 600;
     text-align: center;
     cursor: pointer;
+}
+
+/* footer section */
+.footer{
+    max-width: 1420px;
+    height: 100px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(13, 19, 33, 0.03);
+}
+.footercontainer{
+    max-width: 1120px;
+    display: flex;
+    align-items: center;
+    gap: 525px;
+}
+.foottxt{
+    font-size: 20px;
+    font-weight: 600;
 }
