--- a/styles/style.css
+++ b/styles/style.css
@@ -187,13 +187,12 @@ text-decoration-line: underline;
 .support{
     max-width: 1120px;
     height: 315px;
-    border: 2px solid rebeccapurple;
     padding: 65px 50px;
-    background-image: url('/assets/handshake.jpg');
-    background: rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2),url('/assets/handshake.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),url('/assets/handshake.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-color: rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     align-items: center;
