--- a/styles/style.css
+++ b/styles/style.css
@@ -56,7 +56,7 @@ header{
     font-weight: 800;
 }
 .heroDes{
-    margin: 0 70px;
+    margin: 0 70px 45px;
 }
 .herobtn{
     color: rgb(255, 255, 255);
@@ -65,9 +65,8 @@ header{
     text-align: center;
     border-radius: 8px;
     background: rgb(13, 19, 33);
-    width: 244px;
+    width: 245px;
     height: 65px;
-    margin: 30px 370px 45px;
     cursor: pointer;
 }
 
