--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@ main{
 header{
     max-width: 1420px;
     height: 650px;
-    background-image: url('/assets/Hero-bg.png');
+    background-image: url('/assets/hero-bg.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
